--- a/monkeytutor/static/css/style.css
+++ b/monkeytutor/static/css/style.css
@@ -264,7 +264,7 @@ h1, h2, h3, h4, h5,
   background: #000; }
 
 .form-control {
-  height: 55px;
+  
   background-color: #fff !important;
   font-family: "Raleway", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; }
   .form-control:active, .form-control:focus {
@@ -434,7 +434,7 @@ h1, h2, h3, h4, h5,
 
 /* Navbar */
 .site-navbar {
-  margin-bottom: 100px;
+  margin-bottom: 80px;
   z-index: 9;
   top: 0;
   width: 100%;
@@ -817,7 +817,7 @@ h1, h2, h3, h4, h5,
     color: #fff; }
 
 .site-section {
-  padding: 70px 0; }
+  padding: 50px 0; }
   @media (max-width: 991.98px) {
     .site-section {
       padding: 30px 0; } }
@@ -893,15 +893,17 @@ h1, h2, h3, h4, h5,
   display: inline-block; }
   .custom-pagination ul li a, .custom-pagination ul li span {
     display: inline-block;
-    width: 50px;
-    height: 50px;
-    line-height: 50px;
-    font-size: 20px;
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+    font-size: 15px;
     border-radius: 50%;
     background: #fff;
+    margin-top: 10px;
+    margin-bottom: 5px;
     text-align: center; }
   .custom-pagination ul li > span {
-    background: #0779e4;
+    background: #4361ee;
     color: #fff; }
 
 .box-side {
@@ -911,7 +913,7 @@ h1, h2, h3, h4, h5,
   box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.1);
   background: #fff; }
   .box-side img {
-    margin-bottom: 20px; }
+    margin-bottom: 0px; }
   .box-side h3 {
     margin-bottom: 0;
     font-size: 20px; }
@@ -1094,7 +1096,7 @@ h1, h2, h3, h4, h5,
   color: #ccc; }
 
 .post-entry-1 .post-entry-1-contents {
-  background: #fff;
+  background: #F5F5F5;
   padding: 20px; }
   .post-entry-1 .post-entry-1-contents h2 {
     font-size: 22px;
