--- a/templates/accounts/register_tutor.html
+++ b/templates/accounts/register_tutor.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-{% load static %}
+    {% load static %}
+    {% load crispy_forms_filters %} 
+    {% load crispy_forms_tags %}
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'css/custom.css'%}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.js"></script>
+    <script src="{% static 'js/custom.js' %}"></script>
     <title>Document</title>
 </head>
 <body style="background-color: #F5F5F5;"> 
@@ -32,15 +36,14 @@ h2 {
     padding-left: 0;
 }
 .button {
-    padding: 0.7rem 1.5rem;
-    border: 1px solid #4361ee;
+    
     background-color: #4361ee;
     color: #fff;
     border-radius: 5px;
-    cursor: pointer;
+    
 }
 .submit-btn {
-    border: 1px solid #0e9594;
+    
     background-color: #0e9594;
 }
 .mt-3 {
@@ -169,7 +172,7 @@ ul.form-stepper li a .form-stepper-circle {
     cursor: default;
 }
 </style>
-    <div class="container" style="margin-top: 130px;">
+    <div class="container" style="margin-top: 80px;">
         <div class="row justify-content-center">
             <!-- FORM -->
             <div class="col-8">
@@ -202,49 +205,172 @@ ul.form-stepper li a .form-stepper-circle {
                                 <span class="form-stepper-circle text-muted">
                                     <span>3</span>
                                 </span>
-                                <div class="label text-muted">Credentials</div>
+                                <div class="label text-muted">Additional Information</div>
                             </a>
                         </li>
                         
                     </ul>
                     <!-- Step Wise Form Content -->
-                    <form id="userAccountSetupForm" name="userAccountSetupForm" enctype="multipart/form-data" method="POST">
+                    <form novalidate action="{% url 'register_tutor'%}" id="userAccountSetupForm" name="userAccountSetupForm" enctype="multipart/form-data" method="POST">
                         <!-- Step 1 Content -->
+                        {% csrf_token %}
                         <section id="step-1" class="form-step">
-                            <h2 class="font-normal">Account Basic Details</h2>
+                            <h2 class="font-normal">Personal Information</h2>
+                            <small class="text-muted">All fields with * are compulsory</small>
+                            <br>
+                            <small class="text-muted">Personal contact information will <b>only</b> be shared once a match has been found between a tutor and student to allow for communication between both parties</small>
                             <!-- Step 1 input fields -->
                             <div class="mt-3">
-                                <div class="mb-3">
-                                    <label for="exampleInputEmail1" class="form-label">Email address</label>
-                                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                                    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-                                  </div>
-                                  <div class="mb-3">
-                                    <label for="exampleInputPassword1" class="form-label">Password</label>
-                                    <input type="password" class="form-control" id="exampleInputPassword1">
-                                    
-                                  </div>
+                                <div class="row">
+                                    <div class="form-group col-md-6">
+                                      <label for="inputEmail4">First Name*</label>
+                                      {{user_form.first_name}}
+                                      {{user_form.first_name.errors}}
+                                    </div>
+                                    <div class="form-group col-md-6">
+                                      <label for="inputPassword4">Last Name*</label>
+                                      {{user_form.last_name}}
+                                      {{user_form.last_name.errors}}
+                                    </div>
+                                </div>
                             </div>
                             <div class="mt-3">
-                                <button class="button btn-navigate-form-step" type="button" step_number="2">Next</button>
+                                <div class="row">
+                                    <div class="form-group col-md-4">
+                                      <label for="inputEmail4">Username*</label>
+                                      {{user_form.username}}
+                                      {{ user_form.username.errors }}
+                                    </div>
+                                    <div class="form-group col-md-4">
+                                      <label for="inputPassword4">Email Address*</label>
+                                      {{user_form.email}}
+                                      {{user_form.email.errors}}
+                                    </div>
+                                    <div class="form-group col-md-4">
+                                        <label for="inputEmail4">Profile Photo</label>
+                                        {{tutor_form.profile_picture}}
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="mt-3">
+                                <div class="row">
+                                    <div class="form-group col-md-2">
+                                        <label for="inputPassword4">Gender*</label>
+                                        {{tutor_form.gender}}
+                                        {{tutor_form.gender.errors}}
+                                    </div>
+                                    <div class="form-group col-md-3">
+                                        <label for="inputPassword4">Date of Birth*</label>
+                                        {{tutor_form.dob}}
+                                        {{tutor_form.dob.errors}}
+                                      </div>
+                                    <div class="form-group col-md-3">
+                                      <label for="inputEmail4">Phone Number*</label>
+                                      {{user_form.phone_number}}
+                                      {{user_form.phone_number.errors}}
+                                    </div>
+                                    
+                                    
+                                    
+                                </div>
+                            </div>
+                            <div class="mt-3">
+                                <div class="row">
+                                    <div class="form-group col-md-8">
+                                      <label for="inputEmail4">Address*</label>
+                                      {{tutor_form.address}}
+                                      {{tutor_form.address.errors}}
+                                      <small class="text-muted">Your address will not be shared and will only be used to find tutors near you!</small>
+                                    </div>
+                                    <div class="form-group col-md-4">
+                                      <label for="inputPassword4">Zip Code*</label>
+                                      {{tutor_form.zip_code}}
+                                      {{tutor_form.zip_code.errors}}
+                                    </div>
+                                    
+                                </div>
+                            </div>
+                            <div class="mt-3">
+                                <div class="row">
+                                    <div class="form-group col-md-6">
+                                      <label for="inputEmail4">Password</label>
+                                      {{user_form.password}}
+                                      {{user_form.password.errors}}
+                                      {{user_form.non_field_errors}}
+                                    </div>
+                                    <div class="form-group col-md-6">
+                                      <label for="inputPassword4">Confirm Password</label>
+                                      {{user_form.confirm_password}}
+                                      {{user_form.confirm_password.errors}}
+                                    </div>
+                                    
+                                </div>
+                                <div hidden>
+                                   
+                                    {{tutor_form.latitude}}
+                                    {{tutor_form.longitude}}
+                                </div>
+                            </div>
+                            <div class="mt-3">
+                                <button class=" button btn-navigate-form-step" type="button" step_number="2">Next</button>
                             </div>
                         </section>
                         <!-- Step 2 Content, default hidden on page load. -->
                         <section id="step-2" class="form-step d-none">
-                            <h2 class="font-normal">Social Profiles</h2>
+                            <h2 class="font-normal">Tutoring Preferences</h2>
+                            <small class="text-muted">These preferences will filter the list of tutors available to you to allow for a better match. Preferences can always be changed in profile settings later!</small>
                             <!-- Step 2 input fields -->
                             <div class="mt-3">
-                                <div class="mb-3">
-                                    <label for="exampleInputEmail1" class="form-label">Email address</label>
-                                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                                    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-                                  </div>
-                                  <div class="mb-3">
-                                    <label for="exampleInputPassword1" class="form-label">Password</label>
-                                    <input type="password" class="form-control" id="exampleInputPassword1">
+                                <div class="row">
+                                    <div class="form-group col-md-7">
+                                        <label for="inputEmail4">Subjects Provided*</label>
+                                        <br>
+                                        <div class="form-check form-check-inline">
+                                          <input class="form-check-input select_type" type="radio" name="flexRadioDefault" id="primary" checked >
+                                          <label class="form-check-label" for="flexRadioDefault1">
+                                            Primary
+                                          </label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                          <input class="form-check-input select_type" type="radio" name="flexRadioDefault" id="secondary">
+                                          <label class="form-check-label" for="flexRadioDefault2">
+                                            Secondary
+                                          </label>
+                                        </div>
+                                        <div class="card">
+                                          <div class="card-body">
+                                              {{tutor_form.subjects|as_crispy_field}}
+                                          </div>
+                                        </div>
+                                        
+                                      </div>
                                     
-                                  </div>
+                                    <div class="form-group col-md-4">
+                                        <label for="inputEmail4">Tutor Level*</label>
+                                        <br>
+                                        <br>
+                                        {{tutor_form.tutor_level|as_crispy_field}}
+                                    </div>                     
+                                </div>
                             </div>
+                            
+                            <div class="mt-3">
+                                <div class="row">
+                                    <div class="form-group col-md-6">
+                                        <label for="inputEmail4">Qualification Information*</label>
+                                        {{tutor_form.qualification_information}}
+                                        {{tutor_form.qualification_information.errors}}
+                                      </div>
+                                      <div class="form-group col-md-6">
+                                        <label for="inputEmail4">Certificate Credentials*</label>
+                                        {{tutor_form.certificate_credential}}
+                                        {{tutor_form.certificate_credential.errors}}
+                                        <small class="text-muted">Once an admin verifies your latest credentials, your profile will have a blue tick increase your credibility! Please allow 1-3 working days before your account is verified </small>
+                                      </div>
+                                                                       
+                                </div>
+                            </div>
+    
                             <div class="mt-3">
                                 <button class="button btn-navigate-form-step" type="button" step_number="1">Prev</button>
                                 <button class="button btn-navigate-form-step" type="button" step_number="3">Next</button>
@@ -252,34 +378,38 @@ ul.form-stepper li a .form-stepper-circle {
                         </section>
                         <!-- Step 3 Content, default hidden on page load. -->
                         <section id="step-3" class="form-step d-none">
-                            <h2 class="font-normal">Personal Details</h2>
+                            <h2 class="font-normal">Additional Information</h2>
+                           
                             <!-- Step 3 input fields -->
                             <div class="mt-3">
-                                <div class="mb-3">
-                                    <label for="exampleInputEmail1" class="form-label">Email address</label>
-                                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                                    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-                                  </div>
-                                  <div class="mb-3">
-                                    <label for="exampleInputPassword1" class="form-label">Password</label>
-                                    <input type="password" class="form-control" id="exampleInputPassword1">
-                                    
-                                  </div>
+                                <div class="mt-3">
+                                    <div class="row">
+                                        <div class="form-group col-md-9">
+                                          <label for="inputEmail4">Anything Else To Be Noted?</label>
+                                          {{tutor_form.additional_information}}
+                                        </div>
+                                                                        
+                                    </div>
+                                </div>
                             </div>
                             <div class="mt-3">
-                                <button class="button btn-navigate-form-step" type="button" step_number="2">Prev</button>
-                                <button class="button submit-btn" type="submit">Save</button>
+                                <button class=" button btn-navigate-form-step" type="button" step_number="2">Prev</button>
+                                <button class=" button submit-btn" type="submit">Sign Up</button>
+                                
                             </div>
+                            
                         </section>
                     </form>
+                    
                 </div>
                 <small class="text-muted">Already have an account?<a href="{% url 'login' %}"> Log In here </a> </small>
-
+                
+                </div>
             </div>
             <!-- FORM END -->
         </div>
     </div>
-</div>
+
 <script>
         const navigateToFormStep = (stepNumber) => {
     /**
@@ -350,6 +480,8 @@ document.querySelectorAll(".btn-navigate-form-step").forEach((formNavigationBtn)
     });
 });
 </script>
-    
+<script src="https://maps.googleapis.com/maps/api/js?key={{GOOGLE_API_KEY}}&libraries=places&callback=initAutoComplete" async defer></script>
+<script src="{% static 'js/custom.js'%}"></script>
+
 </body>
 </html>
