--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,8 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
 
@@ -55,6 +56,8 @@
     <script src="{% static 'js/aos.js'%}"></script>
 
     <script src="{% static 'js/main.js'%}"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key={{GOOGLE_API_KEY}}&libraries=places&callback=initAutoComplete" async defer></script>
+    <script src="{% static 'js/custom.js'%}"></script>
     
 </body>
 </html>
