--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -26,11 +26,11 @@
 
           <nav class="site-navigation text-right ml-auto d-none d-lg-block" role="navigation">
             <ul class="site-menu main-menu js-clone-nav ml-auto ">
-              <li><a href="index.html" class="nav-link">Home</a></li>
-              <li><a href="tutorials.html" class="nav-link">Tutorials</a></li>
-              <li><a href="testimonials.html" class="nav-link">Testimonials</a></li>
-              <li><a href="blog.html" class="nav-link">Blog</a></li>
-              <li><a href="about.html" class="nav-link">About</a></li>
+              <li><a href="{% url 'student_homepage' %}" class="nav-link">Home</a></li>
+              <li><a href="{% url 'assignments' %}" class="nav-link">Assignments</a></li>
+              <li><a href="testimonials.html" class="nav-link">Tutors</a></li>
+              <li><a href="{% url 'profile_settings' %}" class="nav-link">Profile Settings</a></li>
+              <li><a href="{% url 'about' %}" class="nav-link">About</a></li>
               <li><a href="{% url 'logout' %}" class="nav-link">Log Out</a></li>
             </ul>
           </nav>
