--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -21,11 +21,11 @@
         <div class="row gx-lg-5 align-items-center">
           <div class="col-lg-6 mb-5 mb-lg-0">
             <h1 class="mt-0 display-3 fw-bold ls-tight" style="color: #364D59">
-              The Best Students deserve <br />
-              <span style="color:#4361ee">The Best Tutors</span>
+              Matching Tutors and Students with <br />
+              <span style="color:#4361ee">0% commission fees</span>
             </h1>
             <p style="color: hsl(217, 10%, 50.8%)">
-              Matching Tutors with Tutees with <b>0% commission fees</b>. 
+               <b> Fast, Easy and Optimised Matchmaking to ensure you find the best tutor!</b> 
             </p>
           </div>
   
@@ -70,6 +70,7 @@
       </div>
     </div>
     <!-- Jumbotron -->
+    
   </section>
   <!-- Section: Design Block -->
 </body>
