--- a/templates/accounts/register_tutor.html
+++ b/templates/accounts/register_tutor.html
@@ -318,7 +318,7 @@ ul.form-stepper li a .form-stepper-circle {
                         <!-- Step 2 Content, default hidden on page load. -->
                         <section id="step-2" class="form-step d-none">
                             <h2 class="font-normal">Tutoring Preferences</h2>
-                            <small class="text-muted">These preferences will filter the list of tutors available to you to allow for a better match. Preferences can always be changed in profile settings later!</small>
+                            <small class="text-muted">These preferences will filter the list of students available to you to allow for a better match. Preferences can always be changed in profile settings later!</small>
                             <!-- Step 2 input fields -->
                             <div class="mt-3">
                                 <div class="row">
@@ -408,6 +408,9 @@ ul.form-stepper li a .form-stepper-circle {
             </div>
             <!-- FORM END -->
         </div>
+        <br>
+        <br>
+        <br>
     </div>
 
 <script>
