--- a/templates/student/homepage.html
+++ b/templates/student/homepage.html
@@ -18,8 +18,8 @@
 
 <div class="site-section  pb-0">
   <div class="container">
-    <div class="row  align-items-stretch overlap">
-      <div class="col-lg-8 mb-2">
+    <div class="row justify-content-center align-items-stretch overlap">
+      <div class="col-10 mb-2">
         <div class="box">
           <div class="row d-flex align-items-start">
             <div class="col-6 col-md-4 mb-3">
@@ -69,7 +69,7 @@
           </div>
         </div>
       </div>
-      <div class="col-lg-4">
+      <div class="col-10">
         <div class="box small">
           <h4 class="mb-2"  style="color: #4361ee;">  <b>Two Ways</b>  to Find a Tutor Now!</h4>
           <div class="row">
@@ -122,243 +122,33 @@
 
         
 
-<div class="site-section pt-1">
-  <div class="container">
-    <div class="row">
-      <div class="col-12">
-        <div class="heading mb-4">
-          
-          <h2 style="color: #4361ee";>Latest Tutors</h2>
-          <small>Tutors have been filtered to match filters in profile settings</small>
-        </div>
-      </div>
-      <div class="col-lg-8">
-        
 
-
-        <div class="row d-flex tutorial-item mb-4">
-          <div class="col-6 col-md-4 mb-3">
-            <div class="img img-fluid"><img src="{% if student.profile_picture %}{{student.profile_picture.url}}{% else %}{% static 'images/hero_bg.jpg'%}{% endif %}" class="img-fluid " alt="Image" 
-              style="border: 5px solid #555;
-                "></div>
-          </div>
-          
-          <div class="col-12 col-md-8">
-            <div class="text" style=" overflow-x: auto;">
-              <p class="category mb-0">Tutor Profile</p>
-              <h3 style="color:#4361ee;" >{{student.user.first_name|title}} {{student.user.last_name|title}}</h3>
-              <table class="table text-wrap">
-                
-                <tbody>
-                  <tr>
-                    <th scope="row">Subjects</th>
-                    <td> </td>
-                  </tr>
-                  <tr>
-                    <th scope="row">Gender</th>
-                    <td> </td>
-                  </tr>
-                  <tr>
-                    <th scope="row">Tutor Level</th>
-                    <td> </td>
-                  </tr>
-                  <tr>
-                    <th scope="row">Available Time Slots</th>
-                    <td> </td>
-                  </tr>
-                  
-                </tbody>
-              </table>              
-              <p class="meta">
-                <span class="mr-2 mb-2"><small class="text-muted">Tutor seems like a fit? View full tutor profile to confirm your interest and send a request !</small></span>
-              </p>           
-              <p class="mb-0">
-                <button class="btn btn-primary mb-2" style="background-color:#4361ee">View Tutor Profile</button>
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <div class="row d-flex tutorial-item mb-4">
-          <div class="col-6 col-md-4 mb-3">
-            <div class="img img-fluid"><img src="{% if student.profile_picture %}{{student.profile_picture.url}}{% else %}{% static 'images/hero_bg.jpg'%}{% endif %}" class="img-fluid " alt="Image" 
-              style="border: 5px solid #555;
-                "></div>
-          </div>
-          
-          <div class="col-12 col-md-8">
-            <div class="text" style=" overflow-x: auto;">
-              <p class="category mb-0">Tutor Profile</p>
-              <h3 style="color:#4361ee;" >{{student.user.first_name|title}} {{student.user.last_name|title}}</h3>
-              <table class="table text-wrap">
-                
-                <tbody>
-                  <tr>
-                    <th scope="row">Subjects</th>
-                    <td> </td>
-                  </tr>
-                  <tr>
-                    <th scope="row">Gender</th>
-                    <td> </td>
-                  </tr>
-                  <tr>
-                    <th scope="row">Tutor Level</th>
-                    <td> </td>
-                  </tr>
-                  <tr>
-                    <th scope="row">Available Time Slots</th>
-                    <td> </td>
-                  </tr>
-                  
-                </tbody>
-              </table>              
-              <p class="meta">
-                <span class="mr-2 mb-2"><small class="text-muted">Tutor seems like a fit? View full tutor profile to confirm your interest and send a request !</small></span>
-              </p>           
-              <p class="mb-0">
-                <button class="btn btn-primary mb-2" style="background-color:#4361ee">View Tutor Profile</button>
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="row d-flex tutorial-item mb-4">
-          <div class="col-6 col-md-4 mb-3">
-            <div class="img img-fluid"><img src="{% if student.profile_picture %}{{student.profile_picture.url}}{% else %}{% static 'images/hero_bg.jpg'%}{% endif %}" class="img-fluid " alt="Image" 
-              style="border: 5px solid #555;
-                "></div>
-          </div>
-          
-          <div class="col-12 col-md-8">
-            <div class="text" style=" overflow-x: auto;">
-              <p class="category mb-0">Tutor Profile</p>
-              <h3 style="color:#4361ee;" >{{student.user.first_name|title}} {{student.user.last_name|title}}</h3>
-              <table class="table text-wrap">
-                
-                <tbody>
-                  <tr>
-                    <th scope="row">Subjects</th>
-                    <td> </td>
-                  </tr>
-                  <tr>
-                    <th scope="row">Gender</th>
-                    <td> </td>
-                  </tr>
-                  <tr>
-                    <th scope="row">Tutor Level</th>
-                    <td> </td>
-                  </tr>
-                  <tr>
-                    <th scope="row">Available Time Slots</th>
-                    <td> </td>
-                  </tr>
-                  
-                </tbody>
-              </table>              
-              <p class="meta">
-                <span class="mr-2 mb-2"><small class="text-muted">Tutor seems like a fit? View full tutor profile to confirm your interest and send a request !</small></span>
-              </p>           
-              <p class="mb-0">
-                <button class="btn btn-primary mb-2" style="background-color:#4361ee">View Tutor Profile</button>
-              </p>
-            </div>
-          </div>
-        </div>
-      
-      </div>
-      <div class="col-lg-4">
-        <div class="box-side mb-3">
-          <a href="#"><img src="{% static 'images/coming_soon_cropped.png' %}" alt="Image" class="img-fluid"></a>
-        </div>  
-        <div class="box-side mb-3">
-          <a href="#"><img src="{% static 'images/coming_soon_cropped.png' %}" alt="Image" class="img-fluid"></a>
-        </div> 
-        <div class="box-side mb-3">
-          <a href="#"><img src="{% static 'images/coming_soon_cropped.png' %}" alt="Image" class="img-fluid"></a>
-        </div> 
-      </div>
-    </div>
-  </div>
-</div>
 
 <div class="site-section pt-0">
-<div class="container">
-  <div class="row justify-content-center">
-    <div class="col-lg-7 text-center mb-5">
-      <div class="heading">
-        
-        <h2 style="color: #4361ee";>User Reviews</h2>
-        <span class="caption">Hear from other students!</span>
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-lg-7 text-center my-5">
+        <div class="heading">
+          
+          <h2 style="color: #4361ee";>Sponsors of the Month</h2>
+          <span class="caption">Check out these other stellar sources of finding private tuition!</span>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-4 mb-4 mb-lg-0">
+        <div class="testimonial-2">
+          <img src="{% static 'images/coming_soon_blue.jpg' %}" alt="Image" class="m-0 img-fluid mr-3">          </div>
+      </div>
+      <div class="col-lg-4 mb-4 mb-lg-0">
+        <div class="testimonial-2">
+          <img src="{% static 'images/coming_soon_blue.jpg' %}" alt="Image" class="m-0 img-fluid mr-3">          </div>
+      </div>
+      <div class="col-lg-4 mb-4 mb-lg-0">
+        <div class="testimonial-2">
+          <img src="{% static 'images/coming_soon_blue.jpg' %}" alt="Image" class="m-0 img-fluid mr-3">          </div>
+      </div>
       </div>
     </div>
   </div>
-  <div class="row">
-    <div class="col-lg-4 mb-4 mb-lg-0">
-      <div class="testimonial-2">
-        <h3 class="h5">Excellent Teacher!</h3>
-        <div>
-          <span class="icon-star text-warning"></span>
-          <span class="icon-star text-warning"></span>
-          <span class="icon-star text-warning"></span>
-          <span class="icon-star text-warning"></span>
-          <span class="icon-star-o text-warning"></span>
-        </div>
-        <blockquote class="mb-4">
-          <p>"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem, deserunt eveniet veniam. Ipsam, nam, voluptatum"</p>
-        </blockquote>
-        <div class="d-flex v-card align-items-center">
-          <img src="{% static 'images/person_1.jpg' %}" alt="Image" class="img-fluid mr-3">
-          <div class="author-name">
-            <span class="d-block">Mike Fisher</span>
-            <span>Owner, Ford</span>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col-lg-4 mb-4 mb-lg-0">
-      <div class="testimonial-2">
-        <h3 class="h5">Best Video Tutorial!</h3>
-        <div>
-          <span class="icon-star text-warning"></span>
-          <span class="icon-star text-warning"></span>
-          <span class="icon-star text-warning"></span>
-          <span class="icon-star text-warning"></span>
-          <span class="icon-star-o text-warning"></span>
-        </div>
-        <blockquote class="mb-4">
-          <p>"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem, deserunt eveniet veniam. Ipsam, nam, voluptatum"</p>
-        </blockquote>
-        <div class="d-flex v-card align-items-center">
-          <img src="{% static 'images/person_1.jpg' %}" alt="Image" class="img-fluid mr-3">
-          <div class="author-name">
-            <span class="d-block">Jean Stanley</span>
-            <span>Traveler</span>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col-lg-4 mb-4 mb-lg-0">
-      <div class="testimonial-2">
-        <h3 class="h5">Easy to Understand!</h3>
-        <div>
-          <span class="icon-star text-warning"></span>
-          <span class="icon-star text-warning"></span>
-          <span class="icon-star text-warning"></span>
-          <span class="icon-star text-warning"></span>
-          <span class="icon-star-o text-warning"></span>
-        </div>
-        <blockquote class="mb-4">
-          <p>"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem, deserunt eveniet veniam. Ipsam, nam, voluptatum"</p>
-        </blockquote>
-        <div class="d-flex v-card align-items-center">
-          <img src="{% static 'images/person_1.jpg' %}" alt="Image" class="img-fluid mr-3">
-          <div class="author-name">
-            <span class="d-block">Katie Rose</span>
-            <span >Customer</span>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-</div>
 {% endblock %}
