--- a/templates/student/homepage.html
+++ b/templates/student/homepage.html
@@ -103,7 +103,7 @@
                      <b>Search for Tutors</b> 
                   </h5>
                   <p class="card-text mb-4 text-center">Scroll through our list of tutors filtered to match your preferences. If you indicate interest in a tutor and they accept your request, you will be notified via email and contact information will be shared to both parties for further arrangements! </p>
-                  <a href="#" class="btn btn-primary mt-auto align-self-start mx-auto" style="background-color: #4361ee;">Get Started</a>
+                  <a href="{% url 'tutors' %}" class="btn btn-primary mt-auto align-self-start mx-auto" style="background-color: #4361ee;">Get Started</a>
                 </div>
               </div>
             </div>
