--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -12,6 +12,24 @@
     <title>Login Page</title>
 </head>
 {% include 'alerts.html' %}
+<style>
+  
+
+.boom{
+    background-color: #F5F5F5;
+    border:none;
+}
+
+.user-content p{
+    margin-top:5px;
+    font-size:12px;
+}
+
+
+.ratings i{
+    color:blue;
+}
+</style>
 <body style="background-color: #F5F5F5;">
     <!-- Section: Design Block -->
 <section class="mt-5">
@@ -72,6 +90,105 @@
     <!-- Jumbotron -->
     
   </section>
+  <div class="container mt-5 mb-5">
+    
+    <div class="row g-2">
+        <div class="col-md-4">
+            <div class="card boom p-3 text-center px-4">
+                
+                <div class="user-image">
+                    
+            <img src="https://i.imgur.com/PKHvlRS.jpg" class="rounded-circle" width="80"
+                    >
+                    
+                </div>
+                
+                <div class="user-content">
+                    
+                    <h5 class="mb-0">Bruce Hardy</h5>
+                    <span>Software Developer</span>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    
+                </div>
+                
+                <div class="ratings">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    
+                </div>
+                
+            </div>
+        </div>
+        
+        <div class="col-md-4">
+            
+            <div class="card p-3 boom text-center px-4">
+                
+                <div class="user-image">
+                    
+            <img src="https://i.imgur.com/w2CKRB9.jpg" class="rounded-circle" width="80"
+                    >
+                    
+                </div>
+                
+                <div class="user-content">
+                    
+                    <h5 class="mb-0">Mark Smith</h5>
+                    <span>Web Developer</span>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    
+                </div>
+                
+                <div class="ratings">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    
+                </div>
+                
+            </div>
+            
+        </div>
+        
+        <div class="col-md-4">
+            
+            <div class="card p-3 text-center  boom px-4">
+                
+                <div class="user-image">
+                    
+            <img src="https://i.imgur.com/ACeArwY.jpg" class="rounded-circle" width="80"
+                    >
+                    
+                </div>
+                
+                <div class="user-content">
+                    
+                    <h5 class="mb-0">Veera  Duncan</h5>
+                    <span>Software Architect</span>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    
+                </div>
+                
+                <div class="ratings">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    
+                </div>
+                
+            </div>
+            
+        </div>
+        
+        
+    </div>
+    
+</div>
   <!-- Section: Design Block -->
 </body>
 </html>
