--- a/templates/student/assignments.html
+++ b/templates/student/assignments.html
@@ -2,6 +2,20 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
+<style>
+  .show {
+    transform: translateY(0rem);
+    display: block;
+    opacity: 1;
+  }
+
+  .arrow {
+    transform: rotate(180deg);
+    transition: 0.2s ease;
+  }
+  
+</style>
+
 <div class="container">
     <div class="row align-items-center justify-content-center">
       <div class="col-lg-10 text-center">
@@ -67,12 +81,64 @@
 
                     
                     
-                    <h5 class="mb-0"><b style="color:#4361ee">0</b> tutors interested</h5>
+                    <h5 class="mb-0"><b style="color:#4361ee">{{assignment.tutor.count}} </b> tutor{{assignment.tutor.count|pluralize}} interested 
+                      {% if assignment.tutor.all %}
+                      
+                      <button class="btn p-0 dropdown-button" id="btn-{{assignment.id}}" data-id="{{assignment.id}}">
+                        <svg xmlns="http://www.w3.org/2000/svg" id="arrow-{{assignment.id}}" width="16" height="16" fill="currentColor" class="bi bi-chevron-down" viewBox="0 0 16 16">
+                          <path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/>
+                        </svg>
+                      </button>
+                      
+                      {% endif %}
+                    
+                    </h5>
                 </div>
-
+                
                 
             </div>
+            
           </div>
+          {% if assignment.tutor.all %}
+          <table class="table table-sm table-bordered table-striped col-lg-12" id="table-{{assignment.id}}" style="display: none;" >
+            <thead>
+              <tr>
+                <th scope="col">#</th>
+                <th scope="col">First Name</th>
+                <th scope="col">Last Name</th>
+                <th scope="col">Type</th>
+                <th scope="col">Phone Number</th>
+                <th scope="col">Email</th>
+                <th scope="col">Qualification Information</th>
+                <th scope="col">Is Verified <svg data-bs-toggle="tooltip" data-bs-placement="top"
+                  data-bs-custom-class="custom-tooltip"
+                  data-bs-title="Verified Users have had their credentials checked and cross-verified by our admins!" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-info-circle" viewBox="0 0 16 16">
+                  <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+                  <path d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/>
+                </svg></th>
+
+              </tr>
+            </thead>
+            <tbody>
+              {% for tutor in assignment.tutor.all %}
+              <tr>
+                <th scope="row">{{forloop.counter}}</th>
+                <td>{{tutor.user.first_name}}</td>
+                <td> {{tutor.user.last_name}}</td>
+                <td>{{tutor.tutor_level}}</td>
+                <td>{{tutor.user.phone_number}}</td>
+                <td>{{tutor.user.email}}</td>
+                <td>{{tutor.qualification_information}}</td>
+                <td class="text-center">{% if tutor.is_verified %}<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-patch-check" viewBox="0 0 16 16">
+                  <path fill-rule="evenodd" d="M10.354 6.146a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 1 1 .708-.708L7 8.793l2.646-2.647a.5.5 0 0 1 .708 0z"/>
+                  <path d="m10.273 2.513-.921-.944.715-.698.622.637.89-.011a2.89 2.89 0 0 1 2.924 2.924l-.01.89.636.622a2.89 2.89 0 0 1 0 4.134l-.637.622.011.89a2.89 2.89 0 0 1-2.924 2.924l-.89-.01-.622.636a2.89 2.89 0 0 1-4.134 0l-.622-.637-.89.011a2.89 2.89 0 0 1-2.924-2.924l.01-.89-.636-.622a2.89 2.89 0 0 1 0-4.134l.637-.622-.011-.89a2.89 2.89 0 0 1 2.924-2.924l.89.01.622-.636a2.89 2.89 0 0 1 4.134 0l-.715.698a1.89 1.89 0 0 0-2.704 0l-.92.944-1.32-.016a1.89 1.89 0 0 0-1.911 1.912l.016 1.318-.944.921a1.89 1.89 0 0 0 0 2.704l.944.92-.016 1.32a1.89 1.89 0 0 0 1.912 1.911l1.318-.016.921.944a1.89 1.89 0 0 0 2.704 0l.92-.944 1.32.016a1.89 1.89 0 0 0 1.911-1.912l-.016-1.318.944-.921a1.89 1.89 0 0 0 0-2.704l-.944-.92.016-1.32a1.89 1.89 0 0 0-1.912-1.911l-1.318.016z"/>
+                </svg>{% else %}{% endif %}</td>
+              </tr>
+              
+              {% endfor %}
+            </tbody>
+          </table>
+          {% endif %}
           {% endfor %}
           {% else%}
           <h6 class="mt-4">You currently have <b>0</b> existing assignments. Head on over to the Post New Assignment tab to create one now !</h6>
@@ -139,7 +205,7 @@
               </div>
               <small class="text-muted">*Disabled fields are autofilled based on profile settings. To change them, edit profile settings!</small>
               <br>
-              <button type="submit" class="btn btn-primary float-right mt-2" style="background-color:#4361ee;">Post New Assignment</button>
+              <button type="submit" class="btn btn-primary float-right mt-2" style="background-color:#4361ee;" onclick="applynotif()">Post New Assignment</button>
               </form>
             </div>
           </div>
@@ -161,6 +227,33 @@ input.addEventListener('input', function(e) {
     e.target.value = value.slice(0, 2);
   }
 });
+
+
+
+const assignments = document.getElementsByClassName('dropdown-button');
+for (const a of assignments) {
+  a.addEventListener('click', function onClick() {
+    this.classList.toggle('arrow')
+    id = this.getAttribute('data-id')
+    table_id = 'table-'+id
+    console.log(table_id)
+    table = document.getElementById(table_id)
+    if (table.style.display == 'none'){
+      table.style.display = 'table'
+    }else{
+      table.style.display = 'none'
+    }
+  });
+}
+
+
+
+
+
+
+const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
+const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
+
 
 </script>
 
